Fix background color bug on small screens
[#117647765]

--- a/src/main/resources/static/sass/imports/dashboard.scss
+++ b/src/main/resources/static/sass/imports/dashboard.scss
@@ -1,5 +1,5 @@
 .dashboard-container {
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-flow: column;
   background-color: $duckEggBlue;
