--- a/src/main/resources/static/sass/imports/error.scss
+++ b/src/main/resources/static/sass/imports/error.scss
@@ -4,7 +4,7 @@ $mobileImageWidth: 349px;
 $mobileImageHeight: 212px;
 
 .error-container {
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-flow: column;
   background-color: $lightTan;
