--- a/src/main/resources/static/sass/imports/project-login.scss
+++ b/src/main/resources/static/sass/imports/project-login.scss
@@ -1,5 +1,5 @@
 .project-login-container {
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-flow: column;
   background-color: $duckEggBlue;
